<resources>
<string name="app_name">Book My Bus</string>
<string name="login_email_hint">Email</string>
<string name="login_password_hint">Password</string>
<string name="name">Enter Name</string>
<string name="mail">Email or Phone</string>
<string name="password">Password</string>
<string name="conPass">Confirm Password</string>
<string name="title_activity_login2">LoginActivity2</string>
<string name="prompt_email">Email</string>
<string name="prompt_password">Password</string>
<string name="action_sign_in">Sign in or register</string>
<string name="action_sign_in_short">Sign in</string>
<string name="welcome">"Welcome !"</string>
<string name="invalid_username">Not a valid username</string>
<string name="invalid_password">Password must be 5 characters</string>
<string name="login_failed">"Login failed"</string>
<string name="Confirm">editComPassword</string>
<string name="editTextPhone">Enter Mail Address Number</string>
<string name="editComPass">Confirm Password</string>
<string name="txtMail">Email</string>
<string name="uPassword">Password</string>
<string name="signBtn">sign in</string>
<string name="open">Open</string>
<string name="close">Close</string>
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="BusNo">Bus No       :</string>
<string name="From">From       :</string>
<string name="To">To       : </string>
<string name="dTime">Departure Time       :</string>
<string name="aTime">Arrival Time       :</string>
<string name="amount">Amount       :</string>
<string name="amountHint">Enter Number Of Seats</string>
<string name="upDate">Update</string>
<string name="uName">Name</string>
<string name="del">Delete</string>
<string name="tv1">Add Bus In Here !!</string>
<string name="pt">Bus ID</string>
<string name="pt2">Route Number</string>
<string name="pt3">License Number</string>
<string name="pt4">Number Of Seats</string>
<string name="bt1">ADD BUS</string>
<string name="tvv2">You Can Edit Or Delete Bus In Here!!</string>
<string name="bt2">UPDATE</string>
<string name="bt3">DELETE </string>
<string name="tvv3">Bus ID</string>
<string name="tvv4">Route ID</string>
<string name="tvv5">Licence Number</string>
<string name="tvv6">Number Of Seats</string>
<string name="pt7">Additional Faire</string>
<string name="hintID">Enter Student ID</string>
<string name="hintName">Enter Student Name</string>
<string name="hintAddress">Enter Student Address</string>
<string name="hintConNo">Enter Student Contact Number</string>
<string name="btnSave">Save</string>
<string name="btnShow">show</string>
<string name="btnUpdate">update</string>
<string name="btnDelete">delete</string>
<string name="nextPg">Next Page</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="hintRoutNoAdmin"> Route Number</string>
<string name="hintFromAdmin"> From</string>
<string name="hintToAdmin"> To</string>
<string name="noOfStops"> No Of Stops</string>
<string name="basePrice"> Base Price</string>
<string name="priceOfStop"> Price For a Stop</string>
<string name="admin_btn_submit">submit</string>
<string name="addRoute">New Route</string>
<string name="allRoutes">Click Route To View Details</string>
<string name="title">All Routes</string>
<string name="view_routes">Route Preview</string>
<string name="admin_route_no">Route No: </string>
<string name="from">From</string>
<string name="admin_from">From:</string>
<string name="admin_to">To:</string>
<string name="admin_stops">Stops:</string>
<string name="admin_bPrice">Base Price:</string>
<string name="admin_sPrice">Stop Price:</string>
<string name="admin_fullPrice">Full Price:</string>
<string name="admin_btn_edit">Edit</string>
<string name="admin_btn_delete">Delete</string>
<string name="updateRoute">Update Route</string>
<string name="btn_update">Update</string>
<string name="addUser">Add New User</string>
<string name="admin_hint_type">Enter User Type</string>
<string name="admin_hint_name">Name</string>
<string name="admin_hint_contact">Contact Number</string>
<string name="admin_hint_email">Email Address</string>
<string name="admin_hint_pwd">Password</string>
<string name="all_users">All Users</string>
<string name="tool_bar_title">Book My Bus</string>
<string name="tool_bar_subtitle">Make Your Ride Awesome</string>
<string name="user_type">Type:</string>
<string name="user_name">Name:</string>
<string name="user_contact">Contact:</string>
<string name="user_email">Email:</string>
<string name="btn3">VIEW BUS</string>
<string name="welcome_trip_manager">Welcome Trip Manager</string>
<string name="view_trips">View Trips</string>
<string name="add_trip">Add Trip</string>
<string name="add_trip_id">Add Trip ID</string>
<string name="add_date">Add Date</string>
<string name="depature_time">Depature Time</string>
<string name="arrival_time">Arrival Time</string>
<string name="cancel">Cancel</string>
<string name="root_id">Root ID :</string>
<string name="select_route_to_add_trip">Select Route To Add Trip</string>
<string name="add_route_id">Add Route ID</string>
</resources>