<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusOwner.AddBus">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv1"
        android:textColor="@color/hash_middle_blue"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pt1"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/edit_text_boder"
        android:ems="10"
        android:hint="@string/pt"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pt2"
        android:layout_width="211dp"
        android:layout_height="53dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/edit_text_boder"
        android:ems="10"
        android:hint="@string/pt2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pt3"
        android:layout_width="213dp"
        android:layout_height="54dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/edit_text_boder"
        android:ems="10"
        android:hint="@string/pt3"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pt4"
        android:layout_width="213dp"
        android:layout_height="53dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="336dp"
        android:background="@drawable/edit_text_boder"
        android:ems="10"
        android:hint="@string/pt4"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="448dp"
        android:backgroundTint="@color/hash_middle_blue"
        android:text="@string/bt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>