<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripManager.TripMainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/tool_bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/txtwelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/tool_bar_subtitle"
            android:textColor="@color/whiteTextColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo_thambi"
            android:text="@string/tool_bar_title"
            android:textColor="@color/whiteTextColor"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="260dp"
        android:layout_height="41dp"
        android:fontFamily="@font/baloo_thambi"
        android:text="@string/welcome_trip_manager"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_all_routes"
        app:layout_constraintBottom_toBottomOf="@+id/btn_view_trips"
        app:layout_constraintEnd_toStartOf="@+id/btn_view_trips"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <Button
        android:id="@+id/btn_view_trips"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/admin_rounded_btn"
        android:backgroundTint="@color/hash_dark_blue"
        android:text="@string/view_trips"
        android:textColor="@color/hash_light_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_add_routes"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_trip"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_trip"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <Button
        android:id="@+id/btn_add_trip"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:background="@drawable/admin_rounded_btn"
        android:backgroundTint="@color/hash_dark_blue"
        android:text="@string/add_trip"
        android:textColor="@color/hash_light_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_trips"
        app:layout_constraintVertical_bias="0.096" />
</androidx.constraintlayout.widget.ConstraintLayout>